--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -32,12 +32,12 @@
                             1234{{userInfo.phoneNumber1}}
                         </span><br>
                     </div>
-                    <div ng-if="userInfo.phoneNumber1">
+                    <div ng-if="userInfo.phoneNumber2">
                         <span class="glyphicon glyphicon-phone" aria-hidden="true">
                             {{userInfo.phoneNumber2}}
                         </span><br>
                     </div>
-                    <div ng-if="userInfo.phoneNumber1">
+                    <div ng-if="userInfo.homeNumber">
                         <span class="glyphicon glyphicon-phone" aria-hidden="true">
                             {{userInfo.homeNumber}}
                         </span><br>
