--- a/public/css/editProfile.css
+++ b/public/css/editProfile.css
@@ -5,7 +5,7 @@ body {
   background-position: center;
 }
 
-.delForm, .editForm, .passForm {
+.setting-forms {
   border: 1px solid #dfdede;
   border-radius: 5px;
   background-color: rgba(255, 255, 255, 1);
@@ -15,33 +15,28 @@ body {
   margin-left: 100px;
   margin-right: 30px;
   margin-bottom: 70px;
-  padding: 0 20px 20px 20px;
+}
+
+.setting-forms h2 {
+  margin-left: 20px;
+}
+
+.delForm, .editForm, .passForm {
+  padding: 20px 20px 20px 20px;
+}
+
+.editForm {
+  padding-top: 0;
+  margin-bottom: 10px;
+}
+
+.passForm {
+  border-top: 1px solid rgb(198, 198, 198);
+  padding-top: 15px;
+  margin-bottom: 10px;
 }
 
 .delForm{
-  background-color: rgba(186, 186, 186, 1)
-}
-
-p {
-  padding-top: 10px;
-}
-
-h2 {
-  padding-left: 120px;
-}
-
-#edit-btn, #pass-btn {
-  color: rgb(0, 0, 0);
-  font: bold;
-  font-size: 20px;
-  background: rgb(0, 150, 50);
-  border: 1px solid rgb(0, 100, 50);
-}
-
-#del-btn {
-  color: rgb(0, 0, 0);
-  font-weight: bold;
-  font-size: 20px;
-  background: rgb(200, 10, 50);
-  border: 1px solid rgb(200, 10, 50);
+  border-top: 3px solid #C9302C;
+  padding-top: 15px;
 }
