--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -1,38 +1,38 @@
 <style>
-   
-    table th, table td, table tr {
+    table th,
+    table td,
+    table tr {
         vertical-align: top;
     }
-
+    
     #edit-btn {
         border-top-left-radius: 0;
         border-bottom-left-radius: 0;
     }
-
+    
     #new-btn {
-        margin-left: 2px; 
+        margin-left: 2px;
     }
-
+    
     #view-btn {
         border-top-right-radius: 0;
         border-bottom-right-radius: 0;
-        border-right: 1px solid rgb(0,70,160);
+        border-right: 1px solid rgb(0, 70, 160);
     }
 </style>
 <div ng-controller="profileController">
     <div ng-if="success">
         <table style=" width:90%; margin:auto">
-                <td>
+            <td>
                 <table width="175">
                     <tr style="width:150px;height:150px">
                         <td>
-                        My profile Picture
+                            My profile Picture
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            {{userInfo.userName}}<br/>
-                            rating is {{userInfo.rate}}
+                            {{userInfo.userName}}<br/> rating is {{userInfo.rate}}
                         </td>
                     </tr>
                     <tr>
@@ -45,24 +45,25 @@
                             {{userInfo.email}}</br>
                             {{userInfo.phoneNumber1}}</br>
                             {{userInfo.phoneNumber2}}</br>
-                            {{userInfo.homeNumber}}</br></br>
+                            {{userInfo.homeNumber}}</br>
+                            </br>
                         </td>
                     </tr>
                     <tr>
                         <td>
                             <div ng-if="myEmail==userInfo.email">
                                 <form>
-                                    <a  href="/editProfile" class="btn btn-primary">Profile settings</a>    
+                                    <a href="/editProfile" class="btn btn-primary">Profile settings</a>
                                 </form>
                             </div>
                             <div ng-if="myEmail!=userInfo.email">
                                 <form name="rateForm" ng-controller="profileController" ng-submit="submitRate()">
                                     <input type="number" name="rate" ng-model="rateGiven" placeholder="A number from 1-5"> <br>
                                     <button type="submit" class="btn btn-default">Rate {{userInfo.userName}}</button>
-                                    <div ng-if="message" type = "danger">
+                                    <div ng-if="message" type="danger">
                                         {{message}}
                                     </div>
-                                    <div ng-if="messageRated" type = "danger">
+                                    <div ng-if="messageRated" type="danger">
                                         {{messageRated}}
                                     </div>
                                 </form>
@@ -77,7 +78,7 @@
                         This user has no posts yet.
                     </h3>
                 </div>
-               <a id="new-btn" href="/post/new" class="btn btn-primary">Create a new Post!</a>
+                <a id="new-btn" href="/post/new" class="btn btn-primary">Create a new Post!</a>
                 <div ng-if="Posts">
                     <div ng-repeat="post in Posts">
                         <div class="panel panel-default">
@@ -103,11 +104,16 @@
                                         <div ng-controller="profileController" ng-click="viewPost()">
                                             <button type="button" class="btn btn-primary" id="edit-btn">View more</button>
                                         </div>
-                                    </div> <!-- End of media-body -->
-                                </div> <!-- End of media -->
-                            </div> <!-- End of panel-body -->
-                        </div> <!-- End of panel -->
-                    </div> <!-- End of row -->
+                                    </div>
+                                    <!-- End of media-body -->
+                                </div>
+                                <!-- End of media -->
+                            </div>
+                            <!-- End of panel-body -->
+                        </div>
+                        <!-- End of panel -->
+                    </div>
+                    <!-- End of row -->
                 </div>
             </td>
         </table>
