minor change in profile view

--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -62,7 +62,7 @@
                         </form>
                     </div>
                 </div><!-- End of profile info -->
-                <div class="col-md-9"><!-- Start of posts area -->
+                <div class="col-md-9" style="text-align: left !important;"><!-- Start of posts area -->
                     <div ng-if="!Posts">
                         <h3>
                             This user has no posts yet.
@@ -92,7 +92,7 @@
                                             <div ng-controller="profileController" ng-click="editPost()">
                                                 <button type="button" class="btn btn-primary" id="edit-btn">Edit</button>
                                             </div>
-                                            <a id="view-btn" href="#" class="btn btn-primary">View more</a>
+                                            <button ng-controller="profileController" ng-click="viewPost()" id="view-btn" href="#" class="btn btn-primary">View more</button>
                                         </div> <!-- End of media-body -->
                                     </div> <!-- End of media -->
                                 </div> <!-- End of panel-body -->
