--- a/public/views/viewMore.html
+++ b/public/views/viewMore.html
@@ -1,38 +1,59 @@
-
-<!-- up & down vote form -->
-<form ng-controller="reviewPostController" ng-submit="submitVote()">
-    <label class="radio-inline">
-       <input type="radio" value="up"   ng-model="vote">Up-vote
-     </label>
-    <label class="radio-inline">
-       <input type="radio" value="down" ng-model="vote">Down-vote
-     </label>
-    <br> <br>
-    <button type="submit" class="btn btn-success">Submit</button>
-    <div>{{message}}</div>
-</form>
+<link rel="stylesheet" href="../css/viewMore.css">
 
 
-<!-- info form  -->
-<hr>
-<form ng-controller="reviewPostController">
-    <p><strong>Post Up-Votes : {{upVotes}}</strong></p>
-    <p><strong>Post Down-Votes : {{downVotes}}</strong></p>
-    <p><strong>Email : {{email}}</strong></p>
-    <p><strong>Species : {{species}}</strong></p>
-    <p><strong>Kind : {{kind}}</strong></p>
-    <p><strong>Gender : {{gender}}</strong></p>
-    <p><strong>Description : {{description}}</strong></p>
-    <div ng-if="exchange">
+<div ng-controller="reviewPostController" class="container post-details">
+  <div class="row">
+
+    <div class="col-md-3" id="left-col">
+      <img ng-src="{{picture}}" alt="No Image Available for this Post" class="img-responsive img-thumbnail">
+      <p id="email-info"><label><strong>Contact email:</strong> {{email}}</label></p>
+      <a href="/profile/{{username}}" class="btn btn-info">View contact profile</a>
+    </div>
+
+    <div class="col-md-9">
+      <p><label><strong>Description:</strong> {{description}}</label></p>
+
+      <p><strong>Post Up-Votes: </strong> {{upVotes}}</p>
+      <p><strong>Post Down-Votes:</strong> {{downVotes}}</p>
+      <p><strong>Species:</strong> {{species}}</p>
+      <p><strong>Kind:</strong> {{kind}}</p>
+      <p><strong>Gender:</strong> {{gender}}</p>
+
+      <div ng-if="sell">
+        <p><strong>Price:</strong> {{price}}</p>
+      </div>
+
+      <div ng-if="exchange">
         <p><strong>SpeciesB : {{speciesB}}</strong></p>
         <p><strong>KindB : {{kindB}}</strong></p>
         <p><strong>GenderB : {{genderB}}</strong></p>
+      </div>
+
     </div>
-    <div ng-if="sell">
-        <p><strong>Price :{{price}}</strong></p>
-    </div>
-    <p><strong>Post Picture :</strong></p>
-    <img ng-src="{{picture}}" alt="No Image Available for this Post" height="42" width="42">
-    <hr>
-    <a href="/profile/{{username}}">Visit Owner's Profile</a>
-</form>
+
+  </div>
+
+  <!-- up & down vote form -->
+  <form ng-controller="reviewPostController" ng-submit="submitVote()">
+    <label class="radio-inline">
+      <input type="radio" value="up"   ng-model="vote">Up-vote
+    </label>
+    <label class="radio-inline">
+      <input type="radio" value="down" ng-model="vote">Down-vote
+    </label>
+    <br> <br>
+    <button type="submit" class="btn btn-success">Submit</button>
+    <div>{{message}}</div>
+  </form>
+
+
+  <!-- info form  -->
+  <hr>
+  <form >
+
+
+
+
+  </form>
+
+</div>
