--- a/public/css/viewMore.css
+++ b/public/css/viewMore.css
@@ -4,13 +4,23 @@
   background-color: white;
   padding: 25px;
   border: 1px solid #ebebeb;
-  border-radius: 5px
+  border-left: 5px solid #2e91f7;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
-#left-col {
-  border-right: 1px solid #ebebeb;
+#right-col {
+  border-left: 2px solid #ebebeb;
 }
 
 #email-info {
+  margin-top: 20px;
+}
+
+#vote-btn {
+  margin-left: 1em;
+}
+
+#view-contact-btn {
   margin-top: 20px;
 }
