--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -1,110 +1,128 @@
 <link rel="stylesheet" href="../css/profile.css">
-<div ng-controller="profileController">
-    <div ng-if="success">
-        <div class="container" id="profile-container">
-            <div class="row">
-                <div class="col-md-3"><!-- Start of profile info -->
-                    <img src="../images/default.jpg" alt="" class="img-responsive img-thumbnail"> <br>
-                    <h2>{{userInfo.firstName}} {{userInfo.lastName}}</h2>
-                    <p>{{userInfo.username}}</p>
-                    <div ng-if="userInfo.rate==0">
-                        <div ng-repeat="i in [1,2,3,4,5]" id="stars1">
-                            <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-                        </div>
-                    </div>
-                    <div ng-if="userInfo.rate!=0">
-                        <div ng-repeat="i in [1,2,3,4,5]" id="stars2">
-                            <div ng-if="i<=userInfo.rate" id="stars3">
-                                <span class="glyphicon glyphicon-star-full" aria-hidden="true"></span>
-                            </div>
-                            <div ng-if="i>userInfo.rate" id="stars4">
+
+<div ng-if="!token">
+  <div class="container not-logged-in">
+    <h2>I see you're not logged in.</h2>
+    <hr>
+    <p>Click here to login</p>
+    <a class="btn btn-success btn-block" href="/login">Login</a>
+    <hr>
+    <p>Perhaps you don't have an account?</p>
+    <a class ="btn btn-primary btn-block" href="/register">Register now | It's free!</a>
+    <div style="text-align:center">
+      <img src="../images/login-pic-2.png" width="250px">
+    </div>
+  </div>
+</div>
+
+<div ng-if="token">
+    <div ng-controller="profileController">
+        <div ng-if="success">
+            <div class="container" id="profile-container">
+                <div class="row">
+                    <div class="col-md-3"><!-- Start of profile info -->
+                        <img src="../images/default.jpg" alt="" class="img-responsive img-thumbnail"> <br>
+                        <h2>{{userInfo.firstName}} {{userInfo.lastName}}</h2>
+                        <p>{{userInfo.username}}</p>
+                        <div ng-if="userInfo.rate==0">
+                            <div ng-repeat="i in [1,2,3,4,5]" id="stars1">
                                 <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
                             </div>
                         </div>
-                    </div>
-                    <hr>
-                    <h6>Contact Information</h6>
-                    <span class="glyphicon glyphicon-envelope" aria-hidden="true">
-                        {{userInfo.email}}
-                    </span><br>
-                    <div ng-if="userInfo.phoneNumber1">
-                        <span class="glyphicon glyphicon-phone" aria-hidden="true">
-                            1234{{userInfo.phoneNumber1}}
-                        </span><br>
-                    </div>
-                    <div ng-if="userInfo.phoneNumber2">
-                        <span class="glyphicon glyphicon-phone" aria-hidden="true">
-                            {{userInfo.phoneNumber2}}
-                        </span><br>
-                    </div>
-                    <div ng-if="userInfo.homeNumber">
-                        <span class="glyphicon glyphicon-phone" aria-hidden="true">
-                            {{userInfo.homeNumber}}
-                        </span><br>
-                    </div>
-                    <hr>
-                    <div ng-if="myEmail==userInfo.email">
-                        <form>
-                            <a  href="/editProfile" class="btn btn-primary" id="profile-edit-btn">Profile settings</a>    
-                        </form>
-                    </div>
-                    <div ng-if="myEmail!=userInfo.email">
-                        <form name="rateForm" ng-controller="profileController" ng-submit="submitRate()">
-                            <input type="number" name="rate" ng-model="rate" placeholder="A number from 1-5"> <br>
-                            <button type="submit" class="btn btn-default">Rate {{userInfo.username}}</button>
-                            <div ng-if="message" type = "danger">
-                                {{message}}
+                        <div ng-if="userInfo.rate!=0">
+                            <div ng-repeat="i in [1,2,3,4,5]" id="stars2">
+                                <div ng-if="i<=userInfo.rate" id="stars3">
+                                    <span class="glyphicon glyphicon-star-full" aria-hidden="true"></span>
+                                </div>
+                                <div ng-if="i>userInfo.rate" id="stars4">
+                                    <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+                                </div>
                             </div>
-                            <div ng-if="messageRated" type = "danger">
-                                {{messageRated}}
-                            </div>
-                        </form>
-                    </div>
-                </div><!-- End of profile info -->
-                <div class="col-md-9"><!-- Start of posts area -->
-                    <div ng-if="!Posts">
-                        <h3>
-                            This user has no posts yet.
-                        </h3>
-                    </div>
-                    <a id="new-btn" href="/post/new" class="btn btn-primary">Create a new Post!</a>
-                    <hr>
-                    <div ng-if="Posts">
-                        <div ng-repeat="post in Posts">
-                            <div class="panel panel-default">
-                                <div class="panel-body">
-                                    <div class="media">
-                                        <div class="media-left">
-                                            <!-- post image -->
-                                            <a href="#">
-                                                <img class="media-object" src="http://placehold.it/150x150" alt="...">
-                                            </a>
-                                        </div>
-                                        <div class="media-body">
-                                            <!-- displaying post type as the title as there is no title! -->
-                                            <h4 class="media-heading label label-success">{{ post.type | stringifyType }}</h4>
-                                            <!-- display post date -->
-                                            <p><small><em>{{ post.date | date }}</em></small></p>
-                                            <!-- fixing description length to display by 250 chars -->
-                                            <p>{{ post.description.slice(0,250) }}...</p>
-                                            <!-- link to show post page -->
-                                            <div ng-controller="profileController" ng-click="editPost()">
-                                                <button type="button" class="btn btn-primary" id="edit-btn">Edit</button>
+                        </div>
+                        <hr>
+                        <h6>Contact Information</h6>
+                        <span class="glyphicon glyphicon-envelope" aria-hidden="true">
+                            {{userInfo.email}}
+                        </span><br>
+                        <div ng-if="userInfo.phoneNumber1">
+                            <span class="glyphicon glyphicon-phone" aria-hidden="true">
+                                1234{{userInfo.phoneNumber1}}
+                            </span><br>
+                        </div>
+                        <div ng-if="userInfo.phoneNumber2">
+                            <span class="glyphicon glyphicon-phone" aria-hidden="true">
+                                {{userInfo.phoneNumber2}}
+                            </span><br>
+                        </div>
+                        <div ng-if="userInfo.homeNumber">
+                            <span class="glyphicon glyphicon-phone" aria-hidden="true">
+                                {{userInfo.homeNumber}}
+                            </span><br>
+                        </div>
+                        <hr>
+                        <div ng-if="myEmail==userInfo.email">
+                            <form>
+                                <a  href="/editProfile" class="btn btn-primary" id="profile-edit-btn">Profile settings</a>    
+                            </form>
+                        </div>
+                        <div ng-if="myEmail!=userInfo.email">
+                            <form name="rateForm" ng-controller="profileController" ng-submit="submitRate()">
+                                <input type="number" name="rate" ng-model="rate" placeholder="A number from 1-5"> <br>
+                                <button type="submit" class="btn btn-default">Rate {{userInfo.username}}</button>
+                                <div ng-if="message" type = "danger">
+                                    {{message}}
+                                </div>
+                                <div ng-if="messageRated" type = "danger">
+                                    {{messageRated}}
+                                </div>
+                            </form>
+                        </div>
+                    </div><!-- End of profile info -->
+                    <div class="col-md-9"><!-- Start of posts area -->
+                        <div ng-if="!Posts">
+                            <h3>
+                                This user has no posts yet.
+                            </h3>
+                        </div>
+                        <a id="new-btn" href="/post/new" class="btn btn-primary">Create a new Post!</a>
+                        <hr>
+                        <div ng-if="Posts">
+                            <div ng-repeat="post in Posts">
+                                <div class="panel panel-default">
+                                    <div class="panel-body">
+                                        <div class="media">
+                                            <div class="media-left">
+                                                <!-- post image -->
+                                                <a href="#">
+                                                    <img class="media-object" src="http://placehold.it/150x150" alt="...">
+                                                </a>
                                             </div>
-                                            <a id="view-btn" href="#" class="btn btn-primary">View more</a>
-                                        </div> <!-- End of media-body -->
-                                    </div> <!-- End of media -->
-                                </div> <!-- End of panel-body -->
-                            </div> <!-- End of panel -->
-                        </div> <!-- End of row -->
-                    </div>
-                </div><!-- End of posts area -->
+                                            <div class="media-body">
+                                                <!-- displaying post type as the title as there is no title! -->
+                                                <h4 class="media-heading label label-success">{{ post.type | stringifyType }}</h4>
+                                                <!-- display post date -->
+                                                <p><small><em>{{ post.date | date }}</em></small></p>
+                                                <!-- fixing description length to display by 250 chars -->
+                                                <p>{{ post.description.slice(0,250) }}...</p>
+                                                <!-- link to show post page -->
+                                                <div ng-controller="profileController" ng-click="editPost()">
+                                                    <button type="button" class="btn btn-primary" id="edit-btn">Edit</button>
+                                                </div>
+                                                <a id="view-btn" href="#" class="btn btn-primary">View more</a>
+                                            </div> <!-- End of media-body -->
+                                        </div> <!-- End of media -->
+                                    </div> <!-- End of panel-body -->
+                                </div> <!-- End of panel -->
+                            </div> <!-- End of row -->
+                        </div>
+                    </div><!-- End of posts area -->
+                </div>
             </div>
         </div>
-    </div>
-    <div ng-if="!success">
-        <h3 align="center">
-            The user {{givenUsername}} does not exist.
-        </h3>
+        <div ng-if="!success">
+            <h3 align="center">
+                The user {{givenUsername}} does not exist.
+            </h3>
+        </div>
     </div>
 </div>
