added verification page

--- a/public/views/charge.html
+++ b/public/views/charge.html
@@ -1,1 +1,13 @@
-<h3> Your Payment was Successful </h3>
+<link rel="stylesheet" href="../css/charge.css">
+
+<div class="wrap">
+  <div class="logo">
+    <div class="oops">	
+      <p>Your Payment is Done Successfully, Enjoy Advertising with us</p>
+    </div>
+		<hr>
+    <div class="sub">
+      <p><a class="btn btn-success" href="#" role="button"><i class="fa fa-sign-in"></i> Home</a></p>
+		</div>
+  </div>
+</div>
